# fswatchd

./: .gitignore  README.md  example.conf  fswatchd.service  install  setup.cfg
src/fswatchd/: __init__.py
