[metadata]
name = fswatchd-NekointheShell
version = 1
author = neko
author_email = neko@127.0.0.1
description = watch for fs events
url = https://github.com/NekointheShell/fswatchd.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pytest
    inotify
    cysystemd


[options.packages.find]
where = src


[tool:pytest]
testpaths =
    tests


[options.entry_points]
console_scripts =
    fswatchd = fswatchd:main
